# solo-leveling-ai-python

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/: main.py
src/app/: main.py
src/config/: AiConfig.py  ai_config.py  config_loader.py
src/di/: providers.py
src/kafka/: consumer.py
src/models/: generate_task_response.py  task_request.py
src/prompt/: task_prompt.py
src/resources/: application.yml
src/services/: GenerateTask.py  generate_task.py  task_service.py
tests/: test_generate_task.py
